# Anomaly-Detection-in-Networks-Using-Machine-Learning

./: .gitignore  01_preprocessing.ipynb  02_statistics.ipynb  03_attack_filter.ipynb  03_attack_filter.py  04_1_feature_selection_for_attack_files.ipynb  04_1_feature_selection_for_attack_files.py  04_2_feature_selection_for_all_data.ipynb  04_2_feature_selection_for_all_data.py  05_1_machine_learning_implementation_for_attack_files .ipynb  05_1_machine_learning_implementation_for_attack_files .py  05_2_machine_learning_implementation_with_18_feature.ipynb  05_2_machine_learning_implementation_with_18_feature.py  05_3_machine_learning_implementation_with_7_feature.ipynb  05_3_machine_learning_implementation_with_7_feature.py  05_4_machine_learning_implementation_final.ipynb  05_4_machine_learning_implementation_final.py  05_4_ml_f_measure_comparison.ipynb  05_4_ml_f_measure_comparison.py  README.md  pyproject.toml
