[tool.poetry]
name = "anomaly-detection-in-networks-using-machine-learning"
version = "0.1.0"
description = "Anomaly Detection in Networks Using Machine Learning"
authors = ["Tharindu Wickramasinghe <tharinduwjh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
scikit-learn = "^0.24.2"
numpy = "^1.19.5"
pandas = "^1.1.5"
matplotlib = "^3.3.4"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
